posiGen_FullsendBox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Permit_Issuing_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Counties/Parishes issue permits, but some Cities actually don&apos;t use permits and leverage the permits.</inlineHelpText>
        <label>Permit Issuing Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_instructions__c</fullName>
        <inlineHelpText>Contact the permit coordinator to make revisions to the instructions</inlineHelpText>
        <label>Permit Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerDash_link__c</fullName>
        <label>PowerDash link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_Notes__c</fullName>
        <label>Preferred Method Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_System_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous System Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Telephone_Type__c</fullName>
        <label>Primary Telephone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Energy_Inflation_Rate__c</fullName>
        <label>Projected Annual Energy Inflation Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_Assessment_Search_Website__c</fullName>
        <label>Property Assessment Search Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referring_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers Referred</relationshipLabel>
        <relationshipName>Accounts_Referred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Documents_to_Apply_for_a_Permit__c</fullName>
        <inlineHelpText>Documents required to apply for a permit</inlineHelpText>
        <label>Required Documents to Apply for a Permit</label>
        <picklist>
            <picklistValues>
                <fullName>Deed/Proof of Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed PG Lease Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Assessor&apos;s Property Page</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Roof_Layout__c</fullName>
        <label>Roof Layout</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE__c</fullName>
        <label>SPE</label>
        <picklist>
            <picklistValues>
                <fullName>J.P. Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefferson Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.O. Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Orleans Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northshore Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orleans Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PosiGen Solar Leasing CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PosiGen Solar Leasing NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Hot Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunLight Powers My Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunlight Powers My Home III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uptown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <picklist>
            <picklistValues>
                <fullName>7.00%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Telephone_Type__c</fullName>
        <label>Secondary Telephone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Case_Notifications_To__c</fullName>
        <inlineHelpText>Email Address to send Case Notifications go</inlineHelpText>
        <label>Send Case Notifications To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_New_PVAssess_Email_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Send New PV Assessment Email To</description>
        <label>Send New PV Assessment Email To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_To_Send_New_PVA_Email_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_New_PV_Install_Email_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Send New PV Install Email To</description>
        <label>Send New PV Install Email To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Send New PV Install Email To)</relationshipLabel>
        <relationshipName>Accounts_Send_PVI_Email_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <label>Service Area</label>
        <picklist>
            <picklistValues>
                <fullName>Baton Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houma/Lake Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lake Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Orleans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Shore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opelousas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shreveport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Monroe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York- Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut-New Haven</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_offered__c</fullName>
        <inlineHelpText>Enter the services offered by the contractor</inlineHelpText>
        <label>Services offered</label>
        <picklist>
            <picklistValues>
                <fullName>Solar installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air sealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duct sealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation - Cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation - Foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roofing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>This is there so that we can have a clean list of county or city names without the &quot;, State&quot; needed to keep the &quot;Salesforce Name&quot; unique</description>
        <inlineHelpText>Put the name of the area without the State at the end of it.</inlineHelpText>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>State</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts In This State</relationshipLabel>
        <relationshipName>Accounts_In_This_State</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Contacting Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Reach Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tan_ID__c</fullName>
        <label>Tan ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity of this account before the ownership transfer</description>
        <label>Transferred Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Previous Owners</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Email__c</fullName>
        <label>Utility Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Utility_Type__c</fullName>
        <label>Utility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bkfa__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bkfa__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bkfa__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__RelatedLeadId__c</fullName>
        <label>RelatedLeadId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AHJ</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Municipality</value>
        </filters>
        <label>AHJ</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PC_EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
            <value>70129</value>
        </filters>
        <label>All Sales</label>
    </listViews>
    <listViews>
        <fullName>Business_Accounts</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>State__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Business Accounts</label>
    </listViews>
    <listViews>
        <fullName>Mike_Williams_Leads</fullName>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>PC_ADDRESS2_STREET</columns>
        <columns>PC_ADDRESS2_CITY</columns>
        <columns>PC_ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Lyon,cain,ziele,mcneal</value>
        </filters>
        <filters>
            <field>PC_ADDRESS2_STATE_CODE</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <label>Mike Williams Leads</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PC_EMAIL</columns>
        <columns>Parish__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>State__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PC_EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PosiGen</fullName>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>State__c</columns>
        <columns>Default_Assignee_User__c</columns>
        <columns>Send_New_PVAssess_Email_To__c</columns>
        <columns>Send_New_PV_Install_Email_To__c</columns>
        <columns>Acronym__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Services_offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.PosiGen</value>
        </filters>
        <label>PosiGen</label>
    </listViews>
    <listViews>
        <fullName>Subcontractors_Vendors</fullName>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>State__c</columns>
        <columns>Default_Assignee_User__c</columns>
        <columns>Send_New_PVAssess_Email_To__c</columns>
        <columns>Send_New_PV_Install_Email_To__c</columns>
        <columns>Acronym__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Services_offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Subcontractor,Account.Vendor</value>
        </filters>
        <label>Subcontractors &amp; Vendors</label>
    </listViews>
    <listViews>
        <fullName>Town</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Town</value>
        </filters>
        <label>Town</label>
    </listViews>
    <listViews>
        <fullName>Uptown_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PC_EMAIL</columns>
        <columns>SPE__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Number_of_Opportunities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SPE__c</field>
            <operation>equals</operation>
            <value>Uptown</value>
        </filters>
        <label>Uptown Customers</label>
        <sharedTo>
            <role>Billing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Utilities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>State__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Utility_Type__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Utility</value>
        </filters>
        <label>Utilities</label>
    </listViews>
    <listViews>
        <fullName>brent_s_leads</fullName>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>PC_ADDRESS2_STREET</columns>
        <columns>PC_ADDRESS2_CITY</columns>
        <columns>PC_ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>mcneal</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>new york</value>
        </filters>
        <label>brent&apos;s leads</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Used for Business Account Records</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Development</fullName>
        <active>true</active>
        <description>Business Development organizations within the local markets</description>
        <label>Business Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Municipality</fullName>
        <active>true</active>
        <description>The government which has domain over the resident. (i.e. the entity that issues Permits)</description>
        <label>Municipality</label>
    </recordTypes>
    <recordTypes>
        <fullName>PosiGen</fullName>
        <active>true</active>
        <description>This exists only to create a record to track PosiGen</description>
        <label>PosiGen</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral_Source_Not_Company_Customer</fullName>
        <active>true</active>
        <description>Used for Referrers that are not an outside company or customer</description>
        <label>Referral Source - Not Company/Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>SPE</fullName>
        <active>true</active>
        <description>Special Purpose Entities</description>
        <label>SPE</label>
    </recordTypes>
    <recordTypes>
        <fullName>State</fullName>
        <active>true</active>
        <description>These are the states Posigen does business in.</description>
        <label>State</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subcontractor</fullName>
        <active>true</active>
        <description>Those who do work on behalf of PosiGen (Installers, EE Upgraders, etc)</description>
        <label>Subcontractor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <description>Companies that supply material and equipment that support the execution of PosiGen work.</description>
        <label>Supplier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Town</fullName>
        <active>true</active>
        <label>Town</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utility</fullName>
        <active>true</active>
        <description>Utility Company</description>
        <label>Utility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Support Vendors (Accounting, Professional Services, etc)</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name_Change_for_Municipality</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Name ) , or(RecordType.Id = &quot;012d0000000P5fG&quot;,RecordType.Id = &quot;012d0000000P5fL&quot;),Not ( $User.ProfileId = &quot;00ed0000000X20L&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You were about to destroy all of Salesforce. Press Cancel.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_must_have_State_filled</fullName>
        <active>true</active>
        <description>for Intacct syncing to create Sales Order</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(BillingStreet)),
ISBLANK( TEXT( BillingStateCode )) 
)</errorConditionFormula>
        <errorDisplayField>BillingStateCode</errorDisplayField>
        <errorMessage>Please pick a State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChannelPartner_AccountFieldSecurity</fullName>
        <active>false</active>
        <description>Prevent Channel Partner profile Organic Invasion from modifying Preferred Method of Contact, Billing Address, and Lead Source fields after creation.</description>
        <errorConditionFormula>AND( 
    $Profile.Name = &quot;Channel Partner&quot;,
    OR(
      AND(
          ISCHANGED( Preferred_Method_of_Contact__c ),
          NOT ISBLANK(PRIORVALUE( Preferred_Method_of_Contact__c ))
          ),
      AND(
          ISCHANGED(  BillingCity ),
          NOT ISBLANK(PRIORVALUE( BillingCity ))
          ),
      AND(
          ISCHANGED(  BillingCountry ),
          NOT ISBLANK(PRIORVALUE( BillingCountry ))
          ),
      AND(
          ISCHANGED(  BillingState ),
          NOT ISBLANK(PRIORVALUE( BillingState ))
          ),
      AND(
          ISCHANGED(  BillingStreet ),
          NOT ISBLANK(PRIORVALUE( BillingStreet ))
          ),
      AND(
          ISCHANGED( BillingPostalCode ),
          NOT ISBLANK(PRIORVALUE( BillingPostalCode ))
          ),
      AND(
          ISCHANGED( PersonLeadSource ),
          NOT ISBLANK(PRIORVALUE( PersonLeadSource ))
         )
   )
)</errorConditionFormula>
        <errorMessage>Lead Source, Billing Address, and Preferred Method of Contact are not editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lockdown_Referring_Customer</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Referring_Customer__c ) , 
 $User.Alias &lt;&gt; &quot;cfitz&quot;)</errorConditionFormula>
        <errorDisplayField>Referring_Customer__c</errorDisplayField>
        <errorMessage>Only the Referral Administrator may change this field. If you&apos;ve recieved this message in error please email referrals@posigen.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lockdown_Referring_Employee</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(  Referring_Employee__c  ) , OR( $User.Alias &lt;&gt; &quot;cfitz&quot;) )</errorConditionFormula>
        <errorDisplayField>Referring_Employee__c</errorDisplayField>
        <errorMessage>Only the Referral Administrator may change this field. If you&apos;ve recieved this message in error please email referrals@posigen.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Formatting</fullName>
        <active>false</active>
        <errorConditionFormula>!REGEX(PersonMobilePhone,&quot;(^\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4}$)?&quot;) ||
!REGEX(Phone,&quot;(^\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4}$)?&quot;) ||
!REGEX(Secondary_Phone__c,&quot;(^\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4}$)?&quot;) ||
!REGEX(PersonHomePhone,&quot;(^\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4}$)?&quot;)</errorConditionFormula>
        <errorMessage>All Phone Fields should have the format (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Required_for_Referral_Accounts</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Phone ) &amp;&amp;    CONTAINS(RecordType.Name, &quot;Referral Account&quot;)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please supply the Referral Account&apos;s Phone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Ownership_Modification</fullName>
        <active>true</active>
        <errorConditionFormula>And( 
ISCHANGED( OwnerId ), 

Not(Or( 
$User.Username = &quot;tjames@posigen.com&quot;, 
$User.Username = &quot;hgordon@posigen.com&quot;, 
$User.Username = &quot;gblanchard@posigen.com&quot;, 
$User.Username = &quot;alindsay@posigen.com&quot;,
$User.Username = &quot;rhorne@posigen.com&quot;,
$User.Username = &quot;kgreen@posigen.com&quot;, 
$User.Username = &quot;barbarah@greengrants.com&quot;, 
$User.Username = &quot;cfitzgerald@posigen.com&quot;, 
$User.Username = &quot;kbovia@greengrants.com&quot;,
$User.ProfileId = &quot;00ed0000000X1VN&quot;,
$User.ProfileId = &quot;00ed0000000WhP5&quot;,
$User.ProfileId = &quot;00ed0000000W9rh&quot;, 
$User.ProfileId = &quot;00ed0000000X20L&quot;, 
$User.ProfileId = &quot;00ed0000000tWnG&quot; 
)) 
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>You do not have authority to change the Account Owner.</errorMessage>
    </validationRules>
</CustomObject>